# jupiter

./: .gitconfig  .gitignore  README.md  jupiter.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json  turbo.json
apis/kratos-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  package.json
apis/kratos-api/.cargo/: config.toml
apis/kratos-api/core/: Cargo.toml
apis/kratos-api/core/lang/: errors.en.json
apis/kratos-api/core/migrations/: 20230831231510_create_db_extensions.sql  20230831231513_create_users_table.sql  20230913032500_create_user_profiles_table.sql  20230919091627_create_links_table.sql  20231003123153_create_muscle_groups_table.sql  20231003123249_create_muscles_table.sql  20231007155021_create_exercises_table.sql  20231007155119_create_exercises_muscles_table.sql  20231218024110_create_performed_workouts_table.sql  20231218024111_create_performed_exercises_table.sql
apis/kratos-api/core/src/: main.rs
apis/kratos-api/core/src/actions/: errors.rs  mod.rs  services.rs
apis/kratos-api/core/src/data/: mod.rs
apis/kratos-api/core/src/enums/: exercise_force.rs  exercise_measurement.rs  exercise_mechanic.rs  link_format.rs  link_type.rs  measurement.rs  measurement_denominator.rs  measurement_format.rs  measurement_operation.rs  measurement_quantity.rs  measurement_unit.rs  mod.rs
apis/kratos-api/core/src/error/: domain.rs
apis/kratos-api/core/src/http/: context.rs  errors.rs  middleware.rs  mod.rs  response.rs  router.rs
apis/kratos-api/core/src/mocks/: mod.rs  models.rs  response.rs
apis/kratos-api/core/src/models/: errors.rs  mod.rs
apis/kratos-api/core/src/prelude/: mod.rs
apis/kratos-api/core/src/sys/: config.rs  mod.rs
apis/kratos-api/core/src/tests/: exercise.rs  muscle_group.rs
apis/kratos-api/core/src/utils/: errors.rs  mod.rs
apis/kratos-api/database/: Cargo.toml
apis/kratos-api/database/migrations/: 20230913032500_create_profiles_table.sql  20230913100956_create_sessions_table.sql  20231003123259_populate_muscle_groups_table.sql  20231003125727_populate_muscles_table.sql  20231007155016_create_exercise_equipment_table.sql  20231007155026_create_exercise_instructions_table.sql  20231007174223_populate_exercise_equipment_table.sql  20231218024112_create_performed_sets_table.sql
apis/kratos-api/database/src/: error.rs  lib.rs  manager.rs  model.rs
apis/kratos-api/database/src/query/: bind.rs  clause.rs  core.rs  mod.rs  select.rs
apis/kratos-api/src/: logger.rs  main.rs
apis/kratos-api/src/actions/: error.rs  mod.rs  profiles.rs  users.rs
apis/kratos-api/src/config/: auth.rs  config.rs  database.rs  error.rs  mod.rs  server.rs
apis/kratos-api/src/enums/: exercise_measurement.rs  exercise_muscle_target.rs  exercise_type.rs  gender.rs  mod.rs  role.rs  set_type.rs  table.rs
apis/kratos-api/src/error/: client.rs  mod.rs
apis/kratos-api/src/http/: mod.rs  router.rs
apis/kratos-api/src/http/controllers/: auth.rs  error.rs  exercise.rs  exercise_equipment.rs  link.rs  mod.rs  muscle.rs  muscle_group.rs
apis/kratos-api/src/http/extractors/: context.rs  error.rs  mod.rs  pagination.rs
apis/kratos-api/src/http/middleware/: error.rs  mod.rs
apis/kratos-api/src/http/resources/: exercise.rs  link.rs  measurement.rs  muscle_group.rs  name.rs  profile.rs
apis/kratos-api/src/http/response/: error.rs  json.rs  mod.rs
apis/kratos-api/src/lib/: error.rs  lang.rs  mod.rs
apis/kratos-api/src/lib/arithmetic/: base.rs  error.rs  number.rs
apis/kratos-api/src/lib/measurements/: measurement.rs  mod.rs  value.rs
apis/kratos-api/src/lib/validators/: mod.rs
apis/kratos-api/src/mocks/: server.rs  user.rs
apis/kratos-api/src/mocks/models/: mod.rs  performed_set.rs
apis/kratos-api/src/models/: error.rs  mod.rs
apis/kratos-api/src/models/exercise/: tests.rs
apis/kratos-api/src/models/exercise_equipment/: builder.rs  tests.rs
apis/kratos-api/src/models/exercise_instruction/: mod.rs  tests.rs
apis/kratos-api/src/models/link/: builder.rs  (+2 more)
apis/kratos-api/src/prelude/: mod.rs  tests.rs  types.rs
apis/kratos-api/src/tests/: exercise_equipment.rs  health.rs  mod.rs  muscle.rs
apis/kratos-api/src/utilities/: crypt.rs
(+304 files in other folders)
