[workspace]
members = ["database"]

[package]
name = "kratos_api"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Bondoc <https://github.com/rbondoc86>"]

[dependencies]
async-trait.workspace = true
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
axum_session = { version = "0.5.0", features = [ "postgres-rustls"] }
bcrypt = "0.15.0"
chrono = { workspace = true, features = ["serde"]}
database = { path = "./database" }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures.workspace = true
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
rust_decimal = "1.33.1"
rust-i18n = "2.2.1"
serde.workspace = true
serde_as.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
simple_logger = "4.2.0"
sqlx.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
thiserror.workspace = true
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

[dev-dependencies]
anyhow = "1.0.75"
axum-test = "13.1.1"
fake = { version = "2.9.1", features = ["chrono", "derive"] }
httpc-test.workspace = true

[workspace.dependencies]
async-trait = "0.1.73"
chrono = { version = "0.4.28" }
futures = "0.3.28"
httpc-test = "0.1.5"
serde = "1.0.188"
serde_as = "0.0.1"
serde_derive = "1.0.188"
serde_json = { version = "1.0.105", features = ["preserve_order"] }
serde_with = "3.3.0"
sqlx = { version = "0.7.1", features = ["macros", "runtime-tokio", "rust_decimal", "tls-rustls", "postgres", "chrono"]}
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25"
thiserror = "1.0.50"
